--- a/src/App.css
+++ b/src/App.css
@@ -8,8 +8,9 @@ body {
   font-family: 'Open Sans', sans-serif;
 }
 
-a {
+a, a:hover {
   text-decoration: none;
+  color: inherit;
 }
 
 h1, h2, h3, h4, h5, h6 {
