--- a/src/App.css
+++ b/src/App.css
@@ -5,8 +5,9 @@
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: 'Muli', sans-serif;
-  font-weight: bold;
+  -font-family: 'Dosis', sans-serif;
+  -font-family: 'Oswald', sans-serif;
+  font-family: 'Poppins', sans-serif;
 }
 
 body {
