--- a/src/App.css
+++ b/src/App.css
@@ -5,13 +5,12 @@
 }
 
 h1, h2, h3, h4, h5, h6 {
-  -font-family: 'Dosis', sans-serif;
-  -font-family: 'Oswald', sans-serif;
   font-family: 'Poppins', sans-serif;
+  margin: 1rem 0 1rem 0;
 }
 
 body {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'PT Serif', serif;
 }
 
 a, a:hover {
